feat: Remove PCA from semantic similarity computation
- Remove PCA dimensionality reduction from TextGraph
- Use full 768-dim PhoBERT embeddings for better accuracy
- Remove scikit-learn dependency
- Update CLI to remove --pca-dimensions and --disable-pca args
- Optimize cosine similarity with numpy dot product on normalized vectors
- Update CPU fallback config (threshold 0.9, top_k 3)
- Add comprehensive documentation in PCA_REMOVAL_SUMMARY.md

Benefits:
✅ Better accuracy (no information loss from 768→128 reduction)
✅ Faster processing (no PCA computation overhead)
✅ Simpler codebase (fewer parameters to tune)
✅ More appropriate for cosine similarity calculations

--- a/config.env
+++ b/config.env
@@ -5,11 +5,9 @@
 OPENAI_KEY=your-openai-api-key-here
 
 # Default parameters (GPU baseline - will auto-optimize for CPU if needed)
-# Semantic Similarity
+# Semantic Similarity (PCA removed for better cosine similarity)
 DEFAULT_SIMILARITY_THRESHOLD=0.85
 DEFAULT_TOP_K=5
-DEFAULT_PCA_DIMENSIONS=128
-DEFAULT_USE_PCA=true
 DEFAULT_USE_FAISS=true
 
 # OpenAI Parameters
@@ -35,9 +33,9 @@ DEMO_DATA_PATH=data/demo.json
 
 # Auto CPU Fallback (used when GPU not detected)
 # System will automatically use these values on CPU-only machines
-CPU_SIMILARITY_THRESHOLD=0.7
+# Higher threshold and lower top-k for CPU performance
+CPU_SIMILARITY_THRESHOLD=0.9
 CPU_TOP_K=3
-CPU_PCA_DIMENSIONS=64
 CPU_USE_FAISS=false
 
 # Note: GPU/CPU detection is automatic. No manual flags needed.
