--- a/config.env
+++ b/config.env
@@ -28,6 +28,17 @@ DEFAULT_EXPORT_GRAPH=text_graph.gexf
 DEFAULT_ENABLE_STATISTICS=true
 DEFAULT_ENABLE_VISUALIZATION=true
 
+# Auto-save Graph (mặc định lưu graph sau khi build)
+DEFAULT_AUTO_SAVE_GRAPH=true
+DEFAULT_AUTO_SAVE_PATH=output/graph_auto_{timestamp}.gexf
+
+# Beam Search Settings (tìm đường đi từ claim đến sentences)
+DEFAULT_ENABLE_BEAM_SEARCH=false
+DEFAULT_BEAM_WIDTH=10
+DEFAULT_BEAM_MAX_DEPTH=6
+DEFAULT_BEAM_MAX_PATHS=20
+DEFAULT_BEAM_EXPORT_DIR=output
+
 # Demo Data
 DEMO_DATA_PATH=data/demo.json
 
